Новый текст в slider

--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Минимальный набор препаратов
+              Минимальный набор препаратов для снятия симптомов алкоголизации (1 капельница)
             </p>
             <p class="slide-description">
-             * При употреблении алкоголя 1-2 дня.
+              * Рекомендовано при употреблении алкоголя 1-2 дня
             </p>
           </div>
         <div class="text-slider">
@@ -123,22 +123,18 @@
             <h2>Медиум</h2>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Осмотр
+              Стандарт*
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Инструментальное обследование
+              Набор препаратов для стабилизации состояния и симптомов ( 2 капельницы)
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Набор для стабилизации состояния
+              Таблетированная терапия
             </p>
             <p class="slide-description">
-              <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Таблетированая терапия
-            </p>
-            <p class="slide-description">
-              * При употреблении алкоголя 3 + дня .
+              * рекомендуется при употреблении 3 дня
             </p>
           </div>
 
@@ -154,22 +150,18 @@
             <h2>Ультра</h2>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Осмотр
+              Стандарт
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Инструментальное обследование
+              Индивидуальный подбор препаратов для купирования симптомов употребления алкоголя
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Индивидуальный набор для купирования симптомов
+              Таблетированная терапия ( усиленная)
             </p>
             <p class="slide-description">
-              <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Таблетированая терапия (Успешная)
-            </p>
-            <p class="slide-description">
-              * При употреблении алкоголя от 3-ех дней. 
+              * рекомендовано при употреблении алкоголя более 3х дней
             </p>
           </div>
 
@@ -185,15 +177,11 @@
             <h2>Домашний стационар</h2>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Осмотр
+              Стандарт
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Инструментальное обследование
-            </p>
-            <p class="slide-description">
-              <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Индивидуальный набор для купирования симптомов
+              Подбор препаратов , заменяющих сутки нахождения в стационаре
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
@@ -201,7 +189,11 @@
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Домашние наблюдение
+              Таблетированная терапия ( расширенная)
+            </p>
+            <p class="slide-description">
+              <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+              Динамическое наблюдение ( патронаж )
             </p>
           </div>
 
@@ -219,23 +211,22 @@
         <div class="slider-card">
           <div class="text-flex">
             <h2>Стандарт</h2>
-            <p class="slide-description">
-              <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Осмотр
-            </p>
-            <p class="slide-description">
-              <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Инструментальное обследование
-            </p>
-            <p class="slide-description">
-              <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Минимальный набор препаратов
-            </p>
-            <p class="slide-description">
-              * При употреблении алкоголя 1-2 дня.
-             </p>
-          </div>
-
+              <p class="slide-description">
+                <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+                Осмотр
+              </p>
+              <p class="slide-description">
+                <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+                Инструментальное обследование
+              </p>
+              <p class="slide-description">
+                <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+                Минимальный набор препаратов для снятия симптомов алкоголизации (1 капельница)
+              </p>
+              <p class="slide-description">
+                * Рекомендовано при употреблении алкоголя 1-2 дня
+              </p>
+            </div>
           <div class="text-slider">
             <a  href="./price.html">Заказать</a>
             <p class="price">5200 руб</p>
@@ -246,24 +237,19 @@
             <h2>Медиум</h2>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Осмотр
+              Стандарт
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Инструментальное обследование
+              Набор препаратов для стабилизации состояния и симптомов ( 2 капельницы)
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Набор для стабилизации состояния
+              Таблетированная терапия
             </p>
             <p class="slide-description">
-              <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Таблетированая терапия
+              * рекомендуется при употреблении 3 дня
             </p>
-          </p>
-          <p class="slide-description">
-            * При употреблении алкоголя от 3-ех дней. 
-          </p> 
           </div>
 
           <div class="text-slider">
@@ -276,24 +262,21 @@
             <h2>Ультра</h2>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Осмотр
+              Стандарт
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Инструментальное обследование
+              Индивидуальный подбор препаратов для купирования симптомов употребления алкоголя
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Индивидуальный набор для купирования симптомов
+              Таблетированная терапия ( усиленная)
             </p>
             <p class="slide-description">
-              <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Таблетированая терапия (Успешная)
-            </p>
-            <p class="slide-description">
-              * При употреблении алкоголя от 3-ех дней. 
+              * рекомендовано при употреблении алкоголя более 3х дней
             </p>
           </div>
+
           <div class="text-slider">
             <a  href="./price.html">Заказать</a>
             <p class="price">12100 руб</p>
@@ -503,61 +486,73 @@
       <div class="inner-slider-cards">
         <div class="slider-card">
             <div class="text-flex">
-              <h2>Имплант Торпедо</h2>
+              <h2>Имплантация «Torpedo»</h2>
               <p class="slide-description">
                 <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-                Все необходимое для стабилизации состояния.
+                Медикаментозная поддержка на протяжении всего срока кодировки
               </p>
               <p class="slide-description">
                 <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-                Включен минимально необходимый набор медикаментов
+                Срок на 6 или 12 месяцев
+              </p>
+              <p class="slide-description">
+                <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+                Снятие швов включено в стоимость
+              </p>
+              <p class="slide-description">
+                <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+                Перед кодировкой консультация врача
               </p>
             </div>
 
           <div class="text-slider">
             <a  href="./price.html">Срочный вызов</a>
-            <p class="price">5000 руб</p>
+            <p class="price"> 8000 руб</p>
           </div>
           </div>
         <div class="slider-card">
             <div class="text-flex">
-              <h2>Кодирование препаратом Эспераль</h2>
+              <h2>Инъекция « Disulfirami»</h2>
               <p class="slide-description">
                 <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-                Индивидуальный план восстановления
+                Медикаментозная поддержка на протяжении всего срока кодировки
               </p>
               <p class="slide-description">
                 <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
                 В результате усиленной программы очищение и восстановление
                 организма происходит быстро и эффективно
               </p>
+              <p class="slide-description">
+                <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+                Срок на 6 или 12 месяцев
+              </p>
+              <p class="slide-description">
+                <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+                Перед кодировкой консультация врача
+              </p>
             </div>
 
           <div class="text-slider">
             <a  href="./price.html">Срочный вызов</a>
-            <p class="price">8000 руб</p>
+            <p class="price"> 8000 руб</p>
           </div>
           </div>
         <div class="slider-card">
             <div class="text-flex">
-              <h2>Кодирование препаратом Нолтрексон</h2>
+              <h2>2-ой Блок</h2>
               <p class="slide-description">
                 <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-                Работа с психологом
+                Усиленный вид запретительной терапии
               </p>
               <p class="slide-description">
                 <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-                Индиви дуальный план восстановления
-              </p>
-              <p class="slide-description">
-                <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-                Гарантия положительного результата
+                Комбинированное внутривенное и внутримышечное введение лекарств
               </p>
             </div>
 
           <div class="text-slider">
             <a  href="./price.html">Срочный вызов</a>
-            <p class="price">25000 руб</p>
+            <p class="price">15000 руб</p>
           </div>
           </div>
       </div>
@@ -568,66 +563,78 @@
         <swiper-slide
         ><div class="slider-card">
           <div class="text-flex">
-            <h2>Вшивание</h2>
+            <h2>Имплантация «Torpedo</h2>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Все необходимое для стабилизации состояния.
+              Медикаментозная поддержка на протяжении всего срока кодировки
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Включен минимально необходимый набор медикаментов
+              Срок на 6 или 12 месяцев
+            </p>
+            <p class="slide-description">
+              <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+              Снятие швов включено в стоимость
+            </p>
+            <p class="slide-description">
+              <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+              Перед кодировкой консультация врача
             </p>
           </div>
 
           <div class="text-slider">
             <a  href="./price.html">Срочный вызов</a>
-            <p class="price">5000 руб</p>
+            <p class="price"> 8000 руб</p>
           </div>
         </div></swiper-slide
         >
         <swiper-slide
         ><div class="slider-card">
           <div class="text-flex">
-            <h2>Укол</h2>
+            <h2>Инъекция « Disulfirami»</h2>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Индивидуальный план восстановления
+              Медикаментозная поддержка на протяжении всего срока кодировки
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
               В результате усиленной программы очищение и восстановление
               организма происходит быстро и эффективно
             </p>
+            <p class="slide-description">
+              <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+              Срок на 6 или 12 месяцев
+            </p>
+            <p class="slide-description">
+              <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+              Перед кодировкой консультация врача
+            </p>
           </div>
 
-          <div class="text-slider">
-            <a  href="./price.html">Срочный вызов</a>
-            <p class="price">8000 руб</p>
-          </div>
+        <div class="text-slider">
+          <a  href="./price.html">Срочный вызов</a>
+          <p class="price"> 8000 руб</p>
+        </div>
         </div></swiper-slide
         >
         <swiper-slide
         ><div class="slider-card">
           <div class="text-flex">
-            <h2>2х Блок</h2>
+            <h2>2-ой Блок</h2>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Работа с психологом
+              Усиленный вид запретительной терапии
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Индиви дуальный план восстановления
-            </p>
-            <p class="slide-description">
-              <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Гарантия положительного результата
+              Комбинированное внутривенное и внутримышечное введение лекарств
             </p>
           </div>
 
-          <div class="text-slider">
-            <a  href="./price.html">Срочный вызов</a>
-            <p class="price">15000 руб</p>
-          </div>
+        <div class="text-slider">
+          <a  href="./price.html">Срочный вызов</a>
+          <p class="price">15000 руб</p>
+        </div>
         </div></swiper-slide
         >
       </swiper-container>
