--- a/price.html
+++ b/price.html
@@ -102,21 +102,21 @@
           <h3>Кодировка</h3>
         </div>
         <div class="price-item">
-          <div class="price-text">Имплант Торпедо</div>
+          <div class="price-text">Имплантация «Torpedo»</div>
           <div class="price-text-second">
             <p class="price-count">от 5000 ₽</p>
             <a class="button-price" href="tel:+79209374763">Заказать</a>
           </div>
         </div>
         <div class="price-item">
-          <div class="price-text">Кодирование препаратом Эспераль</div>
+          <div class="price-text">Инъекция « Disulfirami»</div>
           <div class="price-text-second">
             <p class="price-count">от 8000 ₽</p>
             <a class="button-price" href="tel:+79209374763">Заказать</a>
           </div>
         </div>
         <div class="price-item">
-          <div class="price-text">Кодирование препаратом Нолтрексон</div>
+          <div class="price-text">2-ух Блок</div>
           <div class="price-text-second">
             <p class="price-count">от 25000 ₽</p>
             <a class="button-price" href="tel:+79209374763">Заказать</a>
