--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
+  <meta name="mailru-domain" content="18hGSgqMcnmkFtY7" />
+<head>
     <title>Наркологическая клиника Trezvostin - Ваш путь к здоровью и трезвости. Профессиональная наркологическая и психиатрическая помощь. Срочный выезд. Вывод из запоя на дому. Стационарное лечение. Анонимно.</title>
     <meta name="description" content="Наркологическая клиника Trezvostin предлагает профессиональную наркологическую и психиатрическую помощь в Москве. Мы осуществляем срочный выезд нарколога, вывод из запоя на дому и предоставляем стационарное лечение от алкогольной зависимости. У нас вы можете получить анонимное лечение. Методы кодирования от алкоголя включают фармакологические (вшивание, укол) и психологические (гипноз, метод Довженко, психотерапия), а также физиотерапевтические методы - кодирование лазером и ТЭС-терапия. Мы стремимся начинать терапию на ранних стадиях, обеспечивая стабильную ремиссию или полное выздоровление. Наши наркологи помогут вам освободиться от мотивов приема алкоголя через мотивационные беседы и интервенции. Trezvostin предоставляет комплексное лечение, включая медицинскую терапию, психологическую поддержку и реабилитационные программы. Наша команда специалистов с опытом готова помочь вам на пути к здоровой и трезвой жизни с уважением и конфиденциальностью.">
     <meta name="keywords" content="Наркологическая клиника Trezvostin, вывод из запоя на дому, центр реабилитации, частная наркологическая клиника, наркологическая помощь, психиатрическое лечение, срочный выезд нарколога, стационарное лечение, анонимное лечение алкоголизма, кодирование от алкоголя, фармакологические методы кодирования, психологические методы кодирования, гипноз, метод Довженко, психотерапия, физиотерапевтические методы кодирования, лазерное кодирование, ТЭС-терапия, ранняя терапия, стадии зависимости, мотивационные беседы, интервенция, комплексное лечение, медицинская терапия, психологическая поддержка, реабилитационные программы, Москва.">
@@ -519,11 +520,6 @@
               </p>
               <p class="slide-description">
                 <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-                В результате усиленной программы очищение и восстановление
-                организма происходит быстро и эффективно
-              </p>
-              <p class="slide-description">
-                <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
                 Срок на 6 или 12 месяцев
               </p>
               <p class="slide-description">
@@ -547,6 +543,10 @@
               <p class="slide-description">
                 <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
                 Комбинированное внутривенное и внутримышечное введение лекарств
+              </p>
+              <p class="slide-description">перед кодировкой консультация врача
+                <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
+                Перед кодировкой консультация врача
               </p>
             </div>
 
@@ -598,12 +598,7 @@
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              В результате усиленной программы очищение и восстановление
-              организма происходит быстро и эффективно
-            </p>
-            <p class="slide-description">
-              <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
-              Срок на 6 или 12 месяцев
+              Срок на 6 или 12 месяцев 
             </p>
             <p class="slide-description">
               <img src="./assets/polyarizuyushhaya-smes.png" alt="" />
