--- a/price.html
+++ b/price.html
@@ -71,21 +71,21 @@
         <div class="price-item">
           <div class="price-text">Стандарт</div>
           <div class="price-text-second">
-            <p class="price-count">5000 ₽</p>
+            <p class="price-count">5200 ₽</p>
             <a class="button-price" href="tel:+79209374763">Заказать</a>
           </div>
         </div>
         <div class="price-item">
           <div class="price-text">Медиум</div>
           <div class="price-text-second">
-            <p class="price-count">8000 ₽</p>
+            <p class="price-count">8500 ₽</p>
             <a class="button-price" href="tel:+79209374763">Заказать</a>
           </div>
         </div>
         <div class="price-item">
           <div class="price-text">Ультра</div>
           <div class="price-text-second">
-            <p class="price-count">15 000 ₽</p>
+            <p class="price-count">12 100 ₽</p>
             <a class="button-price" href="tel:+79209374763">Заказать</a>
           </div>
         </div>
@@ -116,7 +116,7 @@
           </div>
         </div>
         <div class="price-item">
-          <div class="price-text">2-ух Блок</div>
+          <div class="price-text">2-ой Блок</div>
           <div class="price-text-second">
             <p class="price-count">от 15000 ₽</p>
             <a class="button-price" href="tel:+79209374763">Заказать</a>
@@ -182,21 +182,21 @@
         <div class="price-item">
           <div class="price-text">Отказ от лечения</div>
           <div class="price-text-second">
-            <p class="price-count">от 5000 ₽</p>
+            <p class="price-count">от 5200 ₽</p>
             <a class="button-price" href="tel:+79209374763">Заказать</a>
           </div>
         </div>
         <div class="price-item">
           <div class="price-text">Ложный вызов</div>
           <div class="price-text-second">
-            <p class="price-count">от 5000 ₽</p>
+            <p class="price-count">от 5200 ₽</p>
             <a class="button-price" href="tel:+79209374763">Заказать</a>
           </div>
         </div>
         <div class="price-item">
           <div class="price-text">Медотвод</div>
           <div class="price-text-second">
-            <p class="price-count">от 5000 ₽</p>
+            <p class="price-count">от 5200 ₽</p>
             <a class="button-price" href="tel:+79209374763">Заказать</a>
           </div>
         </div>
