--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <li><a href=" ./IV.html">IV-терапия</a></li>
           <li><a href="./index.html#footer">Контакты</a></li>
         </ul>
-        <a class="phone-link" href="tel:+79209374763">+79209374763</a>
+        <a class="phone-link" href="tel:+79777208530">+79777208530</a>
         <button class="button-popup" id="button">
           <svg xmlns="http://www.w3.org/2000/svg" width="38" height="27" viewBox="0 0 38 27" fill="none">
             <path d="M6 5.5H32" stroke="black" stroke-width="2"/>
@@ -84,7 +84,7 @@
       <div class="intro__wrapper">
         <h1>Наркологическая клиника Trezvostin</h1>
         <p>Выезд по МО и Москве 45 минут</p>
-        <a  href="tel:+79209374763">Срочный вызов</a>
+        <a  href="tel:+79777208530">Срочный вызов</a>
       </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
@@ -728,7 +728,7 @@
           <a href="./index.html#footer">Контакты</a>
         </div>
         <div class="contacts">
-          <a href="">asedasdas@mail.ru</a><a href="tel:+79209374763">+79209374763</a>
+          <a href="">trezvostin@bk.ru</a><a href="tel:+79777208530">+79777208530</a>
         </div>
       </div>
     </footer>
