--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
     <footer class="footer" id="footer">
       <div class="bottom-footer">
         <a href="./index.html" class="logo">Trezvostin</a>
-        <p>Лицензия :ЛО-77-01-015729/0021189, адрес : Москва, бульвар Бескудниковский, дом 19, корпус 2, кв 74.</p>
+        <p>Лицензия :ЛО-77-01-015729/0021189, адрес : Москва, бульвар Бескудниковский, дом 19, корпус 2, кв 74, организация ООО «Нарколог плюс»</p>
       </div>
       <div class="head-footer">
         <div class="links-footer">
